Final v5 audit: fix two v5 regressions, four pre-existing bugs, and polish
Every source file in all five modules was read in full before the v5 release.

Two regressions introduced during the v4 -> v5 port:

* FallbackClassLoaderHandler probed "classpath" twice for both the method and
  the field, instead of "classpath" and "classPath", so an unknown classloader
  exposing its classpath as a classPath member was no longer handled.
* WebsphereLibertyClassLoaderHandler read the SmartClassPath field as
  "classpath" rather than "classPath", so the fallback path silently found no
  classpath entries on WebSphere Liberty.

Four bugs that predate the port (all to be backported to 4.x):

* LogicalZipFile stopped parsing a central directory entry's extra fields at
  the Zip64 field, so any field after it was never seen. Added
  ExtraFieldsAfterZip64Test, which hand-writes the zipfile bytes, since
  ZipOutputStream drops caller-supplied Zip64 and extended-timestamp fields.
* WebsphereLibertyClassLoaderHandler collected container URLs into a HashSet,
  making Liberty's classpath order depend on URL hash order.
* OffHeapMemory wrapped its sun.misc.Unsafe lookup failure in a
  RuntimeException thrown from an inner catch, which escaped the outer catch
  that was meant to leave the fields null.
* Slice.spillToDisk wrote the whole scratch buffer instead of the used prefix,
  and RandomAccessFileChannelReader neither clamped a read to the space left
  in the destination buffer nor looped on a short FileChannel read.

Other fixes and cleanup:

* ClasspathFinder.find() only closed the NestedJarHandler on an interrupt, so
  an unchecked exception out of the classpath expansion leaked open jarfiles.
* ModulePathInfo's manifest-entry adders are synchronized, and its getters now
  return a snapshot taken under the same lock rather than a live view.
* SliceInputStream does the bounds check and zero-length early return that
  InputStream requires, and ArchiveReader reports use-after-close 